--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
 
       <div class="card" style="margin: 30px;">
               <div class="media-content">
-                <p class="title is-4"><%= name.name %></p>
+                <p class="title is-4"><%= singlePokemon.name %></p>
                 <p class="subtitle is-6">🍭 Favorite Candy: <%= singlePokemon.candy %></p>
                 <img class="pokemonImage" src="<%= singlePokemon.img %>" alt="">
               </div>
